--- a/assets/scss/components/_button-block.scss
+++ b/assets/scss/components/_button-block.scss
@@ -1,12 +1,6 @@
-.button-block {
-  &__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  &__content {
-    max-width: 50%;
-    text-align: center;
-  }
+.button-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
 }
