--- a/assets/scss/components/_logo-block.scss
+++ b/assets/scss/components/_logo-block.scss
@@ -3,9 +3,14 @@
 
   &__wrapper {
     display: flex;
-    flex-direction: row;
     align-items: center;
     text-align: center;
     justify-content: space-around;
+    flex-direction: column;
+    gap: 30px;
+
+    @media ($large) {
+      flex-direction: row;
+    }
   }
 }
