--- a/assets/scss/general/_general.scss
+++ b/assets/scss/general/_general.scss
@@ -7,11 +7,18 @@ body {
 
 section,
 .section {
-  margin: 120px 0;
-  padding: 0 100px;
+  padding: 30px 15px;
 
   &.full {
-    padding: 0;
+    padding: 30px 0;
+  }
+
+  @media ($large) {
+    padding: 60px 100px;
+
+    &.full {
+      padding: 60px 0;
+    }
   }
 }
 
