--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -5,3 +5,9 @@ $darkblue: #4c545d;
 $blue: #9fabb2;
 
 $font: "Bai Jamjuree", Arial, sans-serif;
+
+$small: "max-width: 639px";
+$medium: "min-width: 640px";
+$large: "min-width: 1024px";
+$xlarge: "min-width: 1185px";
+$xxlarge: "min-width: 1440px";
